samples/_failures_safe/1761428422_be81b2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c398addf.c: In function ‘main’:
./samples/SAFE/__tmp_c398addf.c:158:5: error: expected expression at end of input
  158 |     destroy_matrix(&
      |     ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_c398addf.c:158:5: error: expected declaration or statement at end of input
